hasqd/tests/coptest/system/pos/001.sts
#!/bin/sh
$1/hasqd -c s=001.inp dsvt=1 dprn=1
