hasqd/tests/coptest/system/neg/002.sts
#!/bin/sh
$1/hasqd -lnc s=nonexistentfile
